tests/rosetta/out/Smalltalk/call-a-function-12.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| mkAdd mysum partialSum main add2 add3 partial |
mkAdd := [:a | [:b | (a + b) ]. ].
mysum := [:x :y | (x + y). ].
partialSum := [:x | [:y | mysum value: x value: y ]. ].
main := [ add2 := mkAdd value: 2.
add3 := mkAdd value: 3.
Transcript show: ((((((add2 value: 5 asString)) + (' '))) + ((add3 value: 6 asString)))) printString; cr.
partial := partialSum value: 13.
Transcript show: ((partial value: 5 asString)) printString; cr. ].
main value.
